# codit

./: .gitignore  3rdparty.mk  CMakeLists.txt  CoditTest.c  GNUmakefile  README.md  build.mk  builddata.mk  buildnumber.mk  check_defined.fmk  commit.mk  datetime.mk  dependencies.mk  directories.mk  echo  gcc.cmk  makefile  math.fmk  msc.cmk  paths.mk  paths.mk.txt  syscheck.mk  target.mk  test.bat  test_version.mk  version.mk
host/linux/: makefile
host/windows/: mingw32.mk  mingw64.mk  vs2015.mk
include/: Codit-Build.h  Codit-DataModel.h  Codit-Fault.h  Codit-FileLst.h  Codit-FileObj.h  Codit-ProcLst.h  Codit-ProcObj.h  CoditBasic.h  CoditBuild.h  CoditFileobj.h  CoditProclst.h  CoditProcobj.h
mkfunc/: domath.mk
src/: CMakeLists.txt  Codit-BasicMem.c  Codit-BasicPage.c  Codit-BasicStr.c  Codit-Build.c  Codit-FileentName.c  Codit-FilelstNxt.c  Codit-FilelstOpenShut.c  Codit-FilelstPrepAPI.c  Codit-FileobjOpenShut.c  Codit-FileobjPutGet.c  Codit-ProcentName.c  Codit-ProcentPid.c  Codit-ProclstNxt.c  Codit-ProclstOpenShut.c  Codit-ProclstPrepAPI.c  Codit-ProcobjOpenShut.c  Codit-ProcobjPutGet.c  Codit-ProcobjRun.c  Codit.geany  CoditAlloc.h  CoditBasic.h  CoditBasicMem.c  CoditBasicPage.c  CoditBasicStr.c  CoditBuild.c  CoditBuild.h  CoditConfig.h  CoditConfig.h.in  CoditFault.h  CoditFileentName.c  CoditFilelst.h  CoditFilelstNxt.c  CoditFilelstOpenShut.c  CoditFilelstPrepAPI.c  CoditFileobj.h  CoditFileobjOpenShut.c  CoditFileobjPutGet.c  CoditHEAD.c  CoditProcentName.c  (+27 more)
targets/: test.c  test.mk  test.vmk  user.c  user.mk
